--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             content="Messenger"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <title>React App</title>
+    <title>Messenger Web</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
