--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             name="description"
             content="Messenger"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png"/>
     <title>CrowCaw Web</title>
 </head>
 <body>
