--- a/client/index.html
+++ b/client/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png"/>
+    <link rel="icon" href="favicon-32x32.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta
-            name="description"
-            content="Messenger"
+        name="description"
+        content="Messenger"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
     <title>CrowCaw Web</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<script type="module" src="./src/main.tsx"></script>
 </body>
 </html>
