--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,11 @@
         <meta name="description" content="Messenger" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <title>CrowCaw Web</title>
+        <meta property="og:title" content="CrowCaw Web" />
+        <meta property="og:description" content="Messenger" />
+        <meta property="og:image" content="android-chrome-512x512.png" />
+        <meta property="og:url" content="http://localhost:3000/" />
+        <meta property="og:type" content="website" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
