--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="favicon-32x32.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Messenger" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-        <title>CrowCaw Web</title>
+        <meta name="theme-color" content="#212121" />
         <meta property="og:title" content="CrowCaw Web" />
         <meta property="og:description" content="Messenger" />
-        <meta property="og:image" content="android-chrome-512x512.png" />
+        <meta property="og:image" content="icons/icon-512x512.png" />
         <meta property="og:url" content="http://localhost:3000/" />
         <meta property="og:type" content="website" />
+        <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon-48x48.png" />
+        <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png" />
+        <link rel="manifest" href="/site.webmanifest">
+        <title>CrowCaw Web</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
