--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website" />
         <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon-48x48.png" />
         <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png" />
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="/site.webmanifest" />
         <title>CrowCaw Web</title>
     </head>
     <body>
